# whiteboard

./: .gitignore  Cargo.toml  docker-compose.yml
client/: Cargo.toml  index.html  index.scss
client/src/: app.rs  main.rs
client/src/compoment/: first.rs  input.rs  mod.rs
client/src/compoment/chat/: _index.scss  mod.rs
client/src/ws/: mod.rs  ws.rs
docker/: Dockerfile
message/src/: client.rs  lib.rs  server.rs
serve/: Cargo.toml
serve/src/: main.rs  my_ws.rs  server.rs
