[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.79"
wee_alloc = "0.4"
js-sys = "0.3"
message = { path = "../message" }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "Document",
    "ErrorEvent",
    "EventTarget",
    "FileReader",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "Node",
    "ProgressEvent",
    "Text",
    "WebSocket",
    "Window",
]
